--- a/app/src/main/res/layout/item_handled.xml
+++ b/app/src/main/res/layout/item_handled.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_item">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_item">
 
     <TextView
         android:id="@+id/tv_item_handled_name"
@@ -14,96 +14,183 @@
         android:lines="1"
         android:text="@string/app_name"
         android:textColor="@color/colorGrayBlack"
-        android:textSize="@dimen/sp_20" />
+        android:textSize="@dimen/sp_20"/>
 
-    <TextView
-        android:id="@+id/tv_item_handled_time"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/ll_item_handled_1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tv_item_handled_name"
         android:layout_alignStart="@+id/tv_item_handled_name"
         android:layout_below="@+id/tv_item_handled_name"
         android:layout_marginTop="@dimen/dp_8"
-        android:text="time" />
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_item_handled_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="orderNo"/>
+
+        <View
+            android:layout_width="@dimen/dp_1"
+            android:layout_height="@dimen/dp_12"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/dp_8"
+            android:layout_marginRight="@dimen/dp_8"
+            android:background="@color/colorGray"/>
+
+        <TextView
+            android:id="@+id/tv_item_handled_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="time"/>
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_item_handing_order"
+        android:layout_width="@dimen/dp_24"
+        android:layout_height="@dimen/dp_24"
+        android:layout_alignLeft="@+id/ll_item_handled_1"
+        android:layout_alignStart="@+id/ll_item_handled_1"
+        android:layout_below="@+id/ll_item_handled_1"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginStart="@dimen/dp_4"
+        android:layout_marginTop="@dimen/dp_8"
+        android:padding="@dimen/dp_4"
+        android:src="@drawable/ic_order_item"/>
+
+    <LinearLayout
+        android:id="@+id/ll_item_handled_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/iv_item_handing_order"
+        android:layout_toEndOf="@+id/iv_item_handing_order"
+        android:layout_toRightOf="@+id/iv_item_handing_order"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_24"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="安装订单："/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/wire"/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_wire"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_4"
+                android:layout_marginRight="@dimen/dp_4"
+                android:text="0"
+                android:textColor="@color/colorBlueTheme"/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ge_middle"/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_wireless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_4"
+                android:layout_marginRight="@dimen/dp_4"
+                android:text="0"
+                android:textColor="@color/colorBlueTheme"/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ge"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_item_handled_remove"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_24"
+            android:visibility="visible"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_title_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="拆除订单："/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_1_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/wire"/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_wire_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_4"
+                android:layout_marginRight="@dimen/dp_4"
+                android:text="0"
+                android:textColor="@color/colorBlueTheme"/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_2_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ge_middle"/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_wireless_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_4"
+                android:layout_marginRight="@dimen/dp_4"
+                android:text="0"
+                android:textColor="@color/colorBlueTheme"/>
+
+            <TextView
+                android:id="@+id/tv_item_handled_content_3_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ge"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_item_handing_address"
+        android:layout_width="@dimen/dp_24"
+        android:layout_height="@dimen/dp_24"
+        android:layout_alignLeft="@+id/iv_item_handing_order"
+        android:layout_alignStart="@+id/iv_item_handing_order"
+        android:layout_below="@+id/ll_item_handled_order"
+        android:padding="@dimen/dp_4"
+        android:src="@drawable/ic_address_item"/>
 
     <TextView
         android:id="@+id/tv_item_handled_address"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tv_item_handled_time"
-        android:layout_alignStart="@+id/tv_item_handled_time"
-        android:layout_below="@+id/tv_item_handled_time"
-        android:text="address" />
-
-    <TextView
-        android:id="@+id/tv_item_handled_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tv_item_handled_address"
-        android:layout_alignStart="@+id/tv_item_handled_address"
-        android:layout_below="@+id/tv_item_handled_address"
-        android:layout_marginTop="@dimen/dp_8"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/tv_item_handled_content_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tv_item_handled_id"
-        android:layout_alignStart="@+id/tv_item_handled_id"
-        android:layout_below="@+id/tv_item_handled_id"
-        android:text="安装：" />
-
-    <TextView
-        android:id="@+id/tv_item_handled_content_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tv_item_handled_content_title"
-        android:layout_toEndOf="@+id/tv_item_handled_content_title"
-        android:layout_toRightOf="@+id/tv_item_handled_content_title"
-        android:layout_below="@+id/tv_item_handled_id"
-        android:text="@string/wire" />
-
-    <TextView
-        android:id="@+id/tv_item_handled_content_wire"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tv_item_handled_content_1"
-        android:layout_marginLeft="@dimen/dp_4"
-        android:layout_marginRight="@dimen/dp_4"
-        android:layout_toEndOf="@+id/tv_item_handled_content_1"
-        android:layout_toRightOf="@+id/tv_item_handled_content_1"
-        android:text="0"
-        android:textColor="@color/colorBlueTheme" />
-
-    <TextView
-        android:id="@+id/tv_item_handled_content_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tv_item_handled_content_wire"
-        android:layout_toEndOf="@+id/tv_item_handled_content_wire"
-        android:layout_toRightOf="@+id/tv_item_handled_content_wire"
-        android:text="@string/ge_middle" />
-
-    <TextView
-        android:id="@+id/tv_item_handled_content_wireless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tv_item_handled_content_2"
-        android:layout_marginLeft="@dimen/dp_4"
-        android:layout_marginRight="@dimen/dp_4"
-        android:layout_toEndOf="@+id/tv_item_handled_content_2"
-        android:layout_toRightOf="@+id/tv_item_handled_content_2"
-        android:text="0"
-        android:textColor="@color/colorBlueTheme" />
-
-    <TextView
-        android:id="@+id/tv_item_handled_content_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tv_item_handled_content_wireless"
-        android:layout_toEndOf="@+id/tv_item_handled_content_wireless"
-        android:layout_toRightOf="@+id/tv_item_handled_content_wireless"
-        android:text="@string/ge" />
+        android:layout_height="@dimen/dp_24"
+        android:layout_alignTop="@+id/iv_item_handing_address"
+        android:layout_toEndOf="@+id/iv_item_handing_address"
+        android:layout_toRightOf="@+id/iv_item_handing_address"
+        android:gravity="center_vertical"
+        android:text="address"/>
 
 </RelativeLayout>
