--- a/app/src/main/res/layout/item_pended.xml
+++ b/app/src/main/res/layout/item_pended.xml
@@ -23,15 +23,30 @@
         android:layout_alignLeft="@+id/tv_item_pended_title"
         android:layout_alignStart="@+id/tv_item_pended_title"
         android:layout_below="@+id/tv_item_pended_title"
-        android:layout_marginTop="@dimen/dp_8"
+        android:textColor="@color/colorGray"
         android:text="time"/>
+
+    <ImageView
+        android:id="@+id/iv_item_pended_address"
+        android:layout_width="@dimen/dp_24"
+        android:layout_height="@dimen/dp_24"
+        android:layout_marginTop="@dimen/dp_8"
+        android:layout_below="@+id/tv_item_pended_time"
+        android:layout_alignLeft="@+id/tv_item_pended_title"
+        android:layout_alignStart="@+id/tv_item_pended_title"
+        android:layout_marginLeft="@dimen/dp_4"
+        android:layout_marginStart="@dimen/dp_4"
+        android:padding="@dimen/dp_4"
+        android:src="@drawable/ic_address_item"/>
 
     <TextView
         android:id="@+id/tv_item_pended_address"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tv_item_pended_time"
-        android:layout_alignStart="@+id/tv_item_pended_time"
+        android:layout_height="@dimen/dp_24"
+        android:gravity="center_vertical"
+        android:layout_toEndOf="@+id/iv_item_pended_address"
+        android:layout_toRightOf="@+id/iv_item_pended_address"
+        android:layout_alignTop="@+id/iv_item_pended_address"
         android:layout_below="@+id/tv_item_pended_time"
         android:text="address"/>
 
@@ -50,81 +65,46 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/line_item_pended_1"
+        android:gravity="end"
         android:layout_marginTop="@dimen/dp_8"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_item_pended_phone_worker_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:background="@drawable/bg_ellipse_gay"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:lines="1"
+            android:maxEms="6"
+            android:text="@string/app_name"/>
 
-            <ImageView
-                android:id="@+id/iv_item_pended_map"
-                android:layout_width="@dimen/dp_32"
-                android:layout_height="@dimen/dp_32"
-                android:src="@drawable/ic_map_blue"/>
-
-            <TextView
-                android:id="@+id/tv_item_pended_map"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/look_map"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_item_pended_worker"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_item_pended_map"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginStart="@dimen/dp_24"
+            android:background="@drawable/bg_ellipse_gay"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:lines="1"
+            android:maxEms="6"
+            android:text="查看路线"/>
 
-            <ImageView
-                android:id="@+id/iv_item_pended_phone"
-                android:layout_width="@dimen/dp_32"
-                android:layout_height="@dimen/dp_32"
-                android:src="@drawable/ic_phone_blue"/>
-
-            <TextView
-                android:id="@+id/tv_item_pended_phone_worker_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_4"
-                android:lines="1"
-                android:ellipsize="end"
-                android:text="@string/app_name"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_item_pended_contact"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_item_pended_contact"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_item_pended_contact"
-                android:layout_width="@dimen/dp_32"
-                android:layout_height="@dimen/dp_32"
-                android:src="@drawable/ic_mobile"/>
-
-            <TextView
-                android:id="@+id/tv_item_pended_contact"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:lines="1"
-                android:ellipsize="end"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="姓名"/>
-
-        </LinearLayout>
-
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginStart="@dimen/dp_24"
+            android:background="@drawable/bg_ellipse_gay"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:lines="1"
+            android:maxEms="6"
+            android:text="@string/app_name"/>
     </LinearLayout>
 
     <TextView
