--- a/app/src/main/res/layout/dialog_modify_reason.xml
+++ b/app/src/main/res/layout/dialog_modify_reason.xml
@@ -37,8 +37,8 @@
                 android:layout_width="@dimen/dp_40"
                 android:layout_height="@dimen/dp_40"
                 android:layout_gravity="center_horizontal"
-                android:padding="@dimen/dp_8"
-                android:src="@drawable/ic_date"/>
+                android:padding="@dimen/dp_12"
+                android:src="@drawable/ic_calendar_date"/>
 
         </LinearLayout>
 
