--- a/app/src/main/res/layout/item_handing.xml
+++ b/app/src/main/res/layout/item_handing.xml
@@ -78,13 +78,15 @@
         android:layout_below="@+id/ll_item_handing_layout"
         android:layout_marginLeft="@dimen/dp_4"
         android:layout_marginStart="@dimen/dp_4"
-        android:padding="@dimen/dp_4"
+        android:paddingLeft="@dimen/dp_4"
+        android:paddingRight="@dimen/dp_4"
+        android:paddingBottom="@dimen/dp_4"
         android:src="@drawable/ic_address_item"/>
 
     <TextView
         android:id="@+id/tv_item_handing_address"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dp_24"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/ll_item_handing_layout"
         android:layout_toEndOf="@+id/iv_item_handing_address"
         android:layout_toRightOf="@+id/iv_item_handing_address"
@@ -246,7 +248,7 @@
             android:layout_marginLeft="@dimen/dp_24"
             android:layout_marginStart="@dimen/dp_24"
             android:layout_marginTop="@dimen/dp_4"
-            android:background="@drawable/bg_ellipse_blue"
+            android:background="@drawable/bg_ellipse"
             android:ellipsize="end"
             android:gravity="center"
             android:lines="1"
