--- a/app/src/main/res/layout/item_handled.xml
+++ b/app/src/main/res/layout/item_handled.xml
@@ -180,13 +180,15 @@
         android:layout_alignLeft="@+id/iv_item_handing_order"
         android:layout_alignStart="@+id/iv_item_handing_order"
         android:layout_below="@+id/ll_item_handled_order"
-        android:padding="@dimen/dp_4"
+        android:paddingLeft="@dimen/dp_4"
+        android:paddingRight="@dimen/dp_4"
+        android:paddingBottom="@dimen/dp_4"
         android:src="@drawable/ic_address_item"/>
 
     <TextView
         android:id="@+id/tv_item_handled_address"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dp_24"
+        android:layout_height="wrap_content"
         android:layout_alignTop="@+id/iv_item_handing_address"
         android:layout_toEndOf="@+id/iv_item_handing_address"
         android:layout_toRightOf="@+id/iv_item_handing_address"
