--- a/app/src/main/res/layout/item_pend_details.xml
+++ b/app/src/main/res/layout/item_pend_details.xml
@@ -30,6 +30,7 @@
         android:layout_alignLeft="@+id/tv_item_pend_details_title"
         android:layout_alignStart="@+id/tv_item_pend_details_title"
         android:layout_below="@+id/tv_item_pend_details_title"
+        android:textIsSelectable="true"
         android:text="content"/>
 
 </RelativeLayout>
