--- a/app/src/main/res/layout/layout_pend_details_content.xml
+++ b/app/src/main/res/layout/layout_pend_details_content.xml
@@ -93,6 +93,7 @@
                     android:layout_below="@id/tv_layout_pend_details_content_contact_name"
                     android:layout_toEndOf="@+id/iv_layout_pend_details_content_contact"
                     android:layout_toRightOf="@+id/iv_layout_pend_details_content_contact"
+                    android:textIsSelectable="true"
                     android:text=""/>
             </RelativeLayout>
 
@@ -152,8 +153,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignLeft="@+id/tv_layout_pend_details_content_time"
                     android:layout_alignStart="@+id/tv_layout_pend_details_content_time"
-                    android:layout_below="@+id/tv_layout_pend_details_content_time"
-                    android:text=""/>
+                    android:layout_below="@+id/tv_layout_pend_details_content_time"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -188,7 +188,7 @@
                     android:layout_alignLeft="@+id/tv_layout_pend_details_content_order_remarks_title"
                     android:layout_alignStart="@+id/tv_layout_pend_details_content_order_remarks_title"
                     android:layout_below="@+id/tv_layout_pend_details_content_order_remarks_title"
-                    android:text=""/>
+                    android:textIsSelectable="true"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -225,8 +225,8 @@
                     android:layout_alignStart="@+id/tv_layout_pend_details_content_order_remove_title"
                     android:layout_below="@+id/tv_layout_pend_details_content_order_remove_title"
                     android:layout_marginBottom="@dimen/dp_8"
-                    android:visibility="gone"
-                    android:text="sadfasdf"/>
+                    android:textIsSelectable="true"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/tv_layout_pend_details_content_order_install_title"
@@ -281,6 +281,7 @@
                     android:layout_alignLeft="@+id/tv_layout_pend_details_content_remove_title"
                     android:layout_alignStart="@+id/tv_layout_pend_details_content_remove_title"
                     android:layout_below="@+id/tv_layout_pend_details_content_remove_title"
+                    android:textIsSelectable="true"
                     android:text=""/>
             </RelativeLayout>
 
@@ -316,6 +317,7 @@
                     android:layout_alignLeft="@+id/tv_layout_pend_details_content_info_title"
                     android:layout_alignStart="@+id/tv_layout_pend_details_content_info_title"
                     android:layout_below="@+id/tv_layout_pend_details_content_info_title"
+                    android:textIsSelectable="true"
                     android:text=""/>
             </RelativeLayout>
 
