--- a/app/src/main/res/layout/item_pending.xml
+++ b/app/src/main/res/layout/item_pending.xml
@@ -48,6 +48,16 @@
             android:text="time"
             android:textSize="@dimen/sp_13"
             android:textColor="@color/colorGray"/>
+
+        <TextView
+            android:id="@+id/tv_item_pending_modify_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/modify"
+            android:textSize="@dimen/sp_13"
+            android:layout_marginLeft="@dimen/dp_8"
+            android:layout_marginStart="@dimen/dp_8"
+            android:textColor="@color/colorGray"/>
     </LinearLayout>
 
     <TableLayout
