--- a/app/src/main/res/layout/item_handled.xml
+++ b/app/src/main/res/layout/item_handled.xml
@@ -31,6 +31,8 @@
             android:id="@+id/tv_item_handled_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorGray"
+            android:textSize="@dimen/sp_13"
             android:text="orderNo"/>
 
         <View
@@ -45,6 +47,8 @@
             android:id="@+id/tv_item_handled_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorGray"
+            android:textSize="@dimen/sp_13"
             android:text="time"/>
     </LinearLayout>
 
