--- a/app/src/main/res/layout/item_pended.xml
+++ b/app/src/main/res/layout/item_pended.xml
@@ -16,22 +16,57 @@
         android:textColor="@color/colorGrayBlack"
         android:textSize="@dimen/sp_20"/>
 
-    <TextView
-        android:id="@+id/tv_item_pended_time"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/ll_item_pended"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tv_item_pended_title"
         android:layout_alignStart="@+id/tv_item_pended_title"
         android:layout_below="@+id/tv_item_pended_title"
-        android:textColor="@color/colorGray"
-        android:text="time"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_item_pended_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorGray"
+            android:textSize="@dimen/sp_13"
+            android:text="orderNo"/>
+
+        <View
+            android:layout_width="@dimen/dp_1"
+            android:layout_height="@dimen/dp_12"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/dp_8"
+            android:layout_marginRight="@dimen/dp_8"
+            android:background="@color/colorGray"/>
+
+        <TextView
+            android:id="@+id/tv_item_pended_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorGray"
+            android:textSize="@dimen/sp_13"
+            android:text="time"/>
+
+        <TextView
+            android:id="@+id/tv_item_pended_modify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_marginStart="@dimen/dp_4"
+            android:textColor="@color/colorGray"
+            android:textSize="@dimen/sp_13"
+            android:text="@string/modify"
+            android:visibility="gone"/>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_item_pended_address"
         android:layout_width="@dimen/dp_24"
         android:layout_height="@dimen/dp_24"
         android:layout_marginTop="@dimen/dp_8"
-        android:layout_below="@+id/tv_item_pended_time"
+        android:layout_below="@+id/ll_item_pended"
         android:layout_alignLeft="@+id/tv_item_pended_title"
         android:layout_alignStart="@+id/tv_item_pended_title"
         android:layout_marginLeft="@dimen/dp_4"
@@ -49,7 +84,7 @@
         android:layout_toEndOf="@+id/iv_item_pended_address"
         android:layout_toRightOf="@+id/iv_item_pended_address"
         android:layout_alignTop="@+id/iv_item_pended_address"
-        android:layout_below="@+id/tv_item_pended_time"
+        android:layout_below="@+id/ll_item_pended"
         android:text="address"/>
 
     <View
@@ -58,7 +93,7 @@
         android:layout_height="@dimen/dp_1"
         android:layout_below="@+id/tv_item_pended_address"
         android:layout_marginTop="@dimen/dp_8"
-        android:background="@color/color_cut_line"/>
+        android:background="@color/color_cut_line_gray"/>
 
     <LinearLayout
         android:id="@+id/ll_item_pended_"
@@ -108,18 +143,6 @@
             android:maxEms="6"
             android:text="@string/app_name"/>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_item_pended_modify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tv_item_pended_time"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginStart="@dimen/dp_8"
-        android:layout_toEndOf="@+id/tv_item_pended_time"
-        android:layout_toRightOf="@+id/tv_item_pended_time"
-        android:text="@string/modify"
-        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_item_pended_order_status"
